2011-09-13  Christophe Rhodes  <csr21@cantab.net>

	* slime.el (slime-simple-complete-symbol): only display "Complete
	but not unique" message if the partial completion figures in the
	completion list.

2011-08-31  Anton Kovalenko  <anton@sw4me.com>

	* swank-sbcl.lisp (preferred-communication-style): check for
	:sb-thread before :win32, so :spawn is preferred for threaded
	Windows builds.

2011-08-31  Nikodemus Siivola  <nikodemus@random-state.net>

	* swank-sbcl.lisp (make-socket-io-stream): Backwards compatibility with
	SBCL < 1.0.42.43 -- and bugfix.

2011-08-26  Mark Evenson  <evenson@panix.com>

	* swank-abcl.lisp (class-slots): Use exported symbol allowing
	classes with non-standard metaobjects to be inspected.

2011-08-18  Helmut Eller  <heller@common-lisp.net>

	Fix line numbers for compiler notes if is narrowing was in effect.

	* slime.el (slime-canonicalized-location): Widen before calling
	line-number-at-pos.

2011-08-17  Stas Boukarev  <stassats@gmail.com>

	* swank-allegro.lisp (with-redirected-y-or-n-p): Fix modern-mode
	issues.
	Patch by Andrew Myers.

2011-08-09  Nikodemus Siivola  <nikodemus@random-state.net>

	* swank-sbcl.lisp (make-socket-io-stream): Use :SERVE-EVENTS T when
	using :FD-HANDLER as the communication style. SBCL will soon stop
	serving events by default on socket streams.

2011-08-08  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-unintern-symbol): New command.
	* swank.lisp (unintern-symbol): Lisp-side implementation.

2011-07-03  Nikodemus Siivola  <nikodemus@random-state.net>

	* swank-sbcl.lisp (debug-var-info): New function: calls
	SB-DI::DEBUG-VAR-INFO when available.
	(frame-locals, frame-var-value): Treat more-context and more-count
	vars specially.

2011-06-21  Nikodemus Siivola  <nikodemus@random-state.net>

	* swank.lisp (*indentation-cache-lock*): Deleted.
	(perform-indentation-update): Spawn a new thread to handle the
	indentation update when using threads. Move cache-clearing to