@@ -239,9 +239,14 @@
       (maybe-push
        :variable (when (boundp symbol)
                    (doc 'variable)))
-      (maybe-push
-       :function (if (fboundp symbol)
-                     (doc 'function)))
+      (when (fboundp symbol)
+        (maybe-push
+         (cond ((macro-function symbol)     :macro)
+	       ((special-operator-p symbol) :special-operator)
+	       ((typep (fdefinition symbol) 'generic-function)
+                :generic-function)
+	       (t :function))
+         (doc 'function)))
       (maybe-push
        :class (if (find-class symbol nil)
                   (doc 'class)))
